# task-manager

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: hexlet_tests.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: .env.sample  __init__.py  mixins.py  settings.py  test_form_loader.py  text.py  translation.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_data.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labels_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py  0003_alter_statuses_name.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_author_alter_tasks_description_and_more.py  0002_task_tasktolabel_delete_tasks_task_labels_and_more.py  0003_alter_tasks_executor.py  0003_alter_tasks_labels.py  0004_alter_tasks_executor.py  0004_alter_tasks_labels.py  0005_alter_tasks_labels.py  0006_merge_20230307_2124.py  0007_alter_tasks_executor.py  (+5 more)
task_manager/templates/: base.html  create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+23 files in other folders)
