[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Feoktistov Andrei"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.5"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
