[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Feoktistov Andrei"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = "^4.1.5"
python-dotenv = "^0.21.0"
django-bootstrap4 = "^22.3"
dj-database-url = "^1.2.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
